# magnus

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: main.yml
scripts/: script.js
src/: App.tsx  global.d.ts  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  permissions.json  tauri.conf.json
src-tauri/icons/: magnus.icns
src-tauri/src/: assistant.rs  audio_input.rs  audio_output.rs  audio_stream.rs  db.rs  globals.rs  listener.rs  main.rs  model_utils.rs  permissions.rs  settings.rs  tools.rs  transcription.rs  tts.rs  tts_utils.rs
src/components/audioHeader/: audioHeader.tsx  styles.css
src/components/chatBubble/: chatBubble.tsx  styles.css
src/components/chatFrame/: chatFrame.tsx  styles.css
src/components/circularLoading/: circularLoading.tsx  styles.css
src/components/codeBubble/: codeBubble.tsx  styles.css
src/components/contextLine/: contextLine.tsx  styles.css
src/components/loadingIndicator/: loadingIndicator.tsx  styles.css
src/components/loginForm/: loginForm.tsx  styles.css
src/components/logoutButton/: logoutButton.tsx  styles.css
src/components/logoutForm/: logoutForm.tsx
src/components/magnusChatBubble/: magnusChatBubble.tsx  styles.css
src/components/settingsModal/: settingsModal.tsx  styles.css
src/components/ttsToggleButton/: TtsToggleButton.tsx
src/components/typingIndicator/: styles.css  typingIndicator.tsx
src/components/userChatBubble/: chatBubble.tsx  styles.css
src/components/userIcon/: styles.css  userIcon.tsx
src/logUtils/: log.ts
src/utils/: log.ts  user.ts
