[package]
name = "magnus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vosk = "0.2.0"
cpal = "0.15.2"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_sample = "0.11.0" 
ctrlc = "3.4.2"
eyre = "0.6.11"
color-eyre = "0.6.2"
crossbeam = {version = "0.8.3", features = ["crossbeam-channel"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
