[package]
name = "magnus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vosk = "0.2.0"
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
urlencoding = "2.1.3"
scrap = "0.5.0"
image = "0.24.7"
base64 = "0.21.5"
winapi = { version = "0.3.9", features = ["winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
