[package]
name = "magnus"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vosk = "0.2.0"
cpal = "0.15.2"
dasp = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_sample = "0.11.0" 
ctrlc = "3.4.2"
eyre = "0.6.11"
color-eyre = "0.6.2"
crossbeam = {version = "0.8.3", features = ["crossbeam-channel"] }
reqwest = { version = "0.11.23", features = ["json"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
urlencoding = "2.1.3"
scrap = "0.5.0"
image = "0.24.7"
base64 = "0.21.5"
tts = "0.25.6"
clipboard = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
